fix: [FFM-5508]: Fix id overflow, simplify component and add tests (#12972)

--- a/src/modules/75-cf/components/IdentifierText/IdentifierText.module.scss
+++ b/src/modules/75-cf/components/IdentifierText/IdentifierText.module.scss
@@ -8,6 +8,7 @@
 .container-border {
   border-radius: var(--spacing-xsmall);
   border: 1px solid var(--grey-200);
+  display: inline-flex !important;
 }
 
 .copy-button {
